2005-10-17 Niklas Knutsson  <nq@altern.org>

	* Print option to hide underscores (if not for suffix) in names

2005-10-16 Niklas Knutsson  <nq@altern.org>

	* Add unended_function to parse_options and put unended function there when parsing

2005-10-15 Niklas Knutsson  <nq@altern.org>

	* mmHg unit
	* Ideal Gas Constant

2005-10-13 Niklas Knutsson  <nq@altern.org>

	* Fortnight unit
	* More composite units for convenience
	* Foot-Candle unit
	* Fix conversion footcandle <-> lux
	* Einstein unit

2005-10-11 Niklas Knutsson  <nq@altern.org>

	* More composite units for convenience (km, mm, ml, km/h, etc.)

2005-10-08 Niklas Knutsson  <nq@altern.org>

	* Move currency definitions to currencies.xml
	* Functions for loading sepearate global definitions files
	* Create angle units if not loaded from definitions files

2005-10-05 Niklas Knutsson  <nq@altern.org>

	* Do not create qalculate symlink to qalc (confusing when installing GUI in other location)
	* Use gnomevfs-copy instead of wget if available
	* Allow user to specify wget arguments
	* Update currencies

2005-09-21 Niklas Knutsson  <nq@altern.org>

	* mph and mpg units

2005-08-21 Niklas Knutsson  <nq@altern.org>

	* Fix (1/2)^n < 0.5
	* Fix replacement of unicode signs when skipping quotes
	* Fix 0 oC to oF (0*unit != 0)

2005-06-11 Niklas Knutsson  <nq@altern.org>

	* Remove requirement glib-2.0 >= 2.4 and require libxml2 >= 2.3.8
	* Do not let << take precedence over >> read from left to right

2005-06-10 Niklas Knutsson  <nq@altern.org>

	* Do not use unicode prefix names for long names
	* xor() and bitxor() is NOT algebra
	* Add even() and odd() functions
	* shift() function and operators ("<<" and ">>")
	* Add functins for getting exchange rates url and file name to allow interface to do the downloading themselves

2005-06-09 Niklas Knutsson  <nq@altern.org>

	* Support for "e" instead of "E" in result

2005-06-07 Niklas Knutsson  <nq@altern.org>

	* SIGN_POWER_1, ... => "^(1)", ... instead of "^1", ...
